<resources>
    <string name="app_name">App_FCC</string>
    <string name="btn_analisis">Realizar Análisis</string>
    <string name="ayuda">Ayuda</string>
    <string name="tv_bienvenida">App desarrollada con el propósito de ayudar en la detección de sustancias</string>
    <string name="marckis">Marckis</string>
    <string name="mecke">Mecke</string>
    <string name="mandelin">Mandelin</string>
    <string name="simon_s_a_b">Simon\'s (A|B)</string>
    <string name="liebermann">Liebermann</string>
    <string name="froehde">Froehde</string>
    <string name="folin_a_b">Folin (A|B)</string>
    <string name="quimicos_a_usar">Quimico aplicado:</string>
    <string name="todo">TODO</string>
    <string name="subir_imagen">Cargar / Tomar imagen</string>
    <string name="registrar">Registrar resultados</string>
    <string name="cancelar">Cancelar</string>
    <string name="rgb">RGB:</string>
    <string name="hex">HEX:</string>
    <string name="resultado">Resultado</string>
    <string name="quimico">Quimico:</string>
    <string name="coincidencias">Coincidencias</string>
    <string name="red1">Red1</string>
    <string name="green1">Green1</string>
    <string name="blue1">Blue1</string>
    <string name="color1">Color1</string>
    <string name="red2">Red2</string>
    <string name="green2">Green2</string>
    <string name="blue2">Blue2</string>
    <string name="color2">Color2</string>
    <string name="sust1">sust1</string>
    <string name="tvrgb">tvRGB</string>
    <string name="tvhex">tvHEX</string>
    <string name="tvquimico">tvQuimico</string>
    <string name="resultados">RESULTADOS</string>
    <string name="toma_2">Toma 2</string>
    <string name="toma_1">Toma 1</string>
    <string name="toma_4">Toma 4</string>
    <string name="toma_3">Toma 3</string>
    <string name="tvrgb2">tvRGB2</string>
    <string name="tvrgb3">tvRGB3</string>
    <string name="tvrgb4">tvRGB4</string>
    <string name="tvhex2">tvHEX2</string>
    <string name="tvhex23">tvHEX23</string>
    <string name="tvhex24">tvHEX24</string>
    <string name="tvquimico2">tvquimico2</string>
    <string name="tvquimico3">tvquimico3</string>
    <string name="tvquimico4">tvquimico4</string>
    <string name="registro_1">Registro 1</string>
    <string name="registro_2">Registro 2</string>
    <string name="registro_string_toma_4">Registro @string/toma_4</string>
    <string name="registro_3">Registro 3</string>
    <string name="registro_4">Registro 4</string>
    <string name="gestionar_imagen">GESTIONAR IMAGEN</string>
    <string name="selecciona_imagen">Selecciona Imagen</string>
    <string name="todo">TODO</string>
</resources>
