<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/secondaryColor"
    tools:context=".TomaMuestraActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/imgImagen"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitCenter"
                android:src="@drawable/flores_4" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:onClick="onclick"
                android:text="@string/subir_imagen" />

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrar" />

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelar" />

            <RadioGroup
                android:id="@+id/rgQuimico"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/tv_quimico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimicos_a_usar" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_marckis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onRadioButtonCLicked"
                        android:text="@string/marckis" />

                    <RadioButton
                        android:id="@+id/rb_mecke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:onClick="onRadioButtonCLicked"
                        android:text="@string/mecke" />

                    <RadioButton
                        android:id="@+id/rb_mandelin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:onClick="onRadioButtonCLicked"
                        android:text="@string/mandelin" />

                    <RadioButton
                        android:id="@+id/rb_simon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:onClick="onRadioButtonCLicked"
                        android:text="@string/simon_s_a_b" />
                </LinearLayout>

            </RadioGroup>

            <TextView
                android:id="@+id/txtHexa"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtColor"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtRGB"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtQuimico"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <Button
                android:id="@+id/registro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_1" />

            <RadioGroup
                android:id="@+id/rgQuimico2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/tv_quimico2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimicos_a_usar" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_mecke2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/mecke" />

                    <RadioButton
                        android:id="@+id/rb_marckis2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/marckis" />

                    <RadioButton
                        android:id="@+id/rb_mandelin2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/mandelin" />

                    <RadioButton
                        android:id="@+id/rb_simon2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/simon_s_a_b" />
                </LinearLayout>

            </RadioGroup>

            <TextView
                android:id="@+id/txtHexa2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtRGB2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtColor2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtQuimico2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <Button
                android:id="@+id/registro2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_2" />

            <RadioGroup
                android:id="@+id/rgQuimico3"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/tv_quimico3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimicos_a_usar" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_mecke3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/mecke" />

                    <RadioButton
                        android:id="@+id/rb_mandelin3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/mandelin" />

                    <RadioButton
                        android:id="@+id/rb_marckis3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/marckis" />

                    <RadioButton
                        android:id="@+id/rb_simon3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/simon_s_a_b" />
                </LinearLayout>

            </RadioGroup>

            <TextView
                android:id="@+id/txtHexa3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtRGB3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtColor3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtQuimico3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <Button
                android:id="@+id/registro3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_3" />

            <RadioGroup
                android:id="@+id/rgQuimico4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/tv_quimico4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quimicos_a_usar" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_marckis4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/marckis" />

                    <RadioButton
                        android:id="@+id/rb_mecke4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/mecke" />

                    <RadioButton
                        android:id="@+id/rb_mandelin4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/mandelin" />

                    <RadioButton
                        android:id="@+id/rb_simon4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/simon_s_a_b" />
                </LinearLayout>

            </RadioGroup>

            <TextView
                android:id="@+id/txtHexa4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtRGB4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtColor4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <TextView
                android:id="@+id/txtQuimico4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="4dp" />

            <Button
                android:id="@+id/registro4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_4" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>