<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryColor"
    tools:context=".RegistroMuestraActivity">

    <TextView
        android:id="@+id/textResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textStyle="normal|bold"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="47dp" />

    <TextView
        android:id="@+id/rgb_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/textRGB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rgb"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/textHEX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hex"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/hex_tv"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/textQuimico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quimico"
        tools:layout_editor_absoluteX="190dp"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/chemical_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="242dp"
        tools:layout_editor_absoluteY="214dp" />

    <TextView
        android:id="@+id/tv_coincidencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coincidencias"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="308dp" />

    <TextView
        android:id="@+id/red1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/green1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/blue1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/color1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="352dp"
        tools:layout_editor_absoluteY="356dp" />

    <TextView
        android:id="@+id/red2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@+id/green2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@+id/blue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@+id/color2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="352dp"
        tools:layout_editor_absoluteY="375dp" />

    <TextView
        android:id="@+id/green3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="394dp" />

    <TextView
        android:id="@+id/red3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="394dp" />

    <TextView
        android:id="@+id/color3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="352dp"
        tools:layout_editor_absoluteY="394dp" />

    <TextView
        android:id="@+id/blue3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="394dp" />

    <TextView
        android:id="@+id/color4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="352dp"
        tools:layout_editor_absoluteY="413dp" />

    <TextView
        android:id="@+id/blue4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="413dp" />

    <TextView
        android:id="@+id/green4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="413dp" />

    <TextView
        android:id="@+id/red4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="419dp" />
</android.support.constraint.ConstraintLayout>